# FFmpegStudy

./: .clang-format  .gitignore  CMakeLists.txt  FFmpeg.md  README.md  cofiguration.md  音视频采集.md
Image_player/: CMakeLists.txt
StudyNotes/: FFmpeg.md  视频解码.md
lib/: libavdevice.so.61.1.100  libavformat.so.61.1.100  libavutil.so.59.8.100  libpostproc.so.58.1.100  libswresample.so.5.1.100  libswscale.so.8.1.100
libavcodec/: CMakeLists.txt  aaccoder.d  aacdec.d  aacdec_common.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_fixed_tablegen  aacps_fixed_tablegen.d  aacps_fixed_tables.h  aacps_float.d  aacps_tablegen  aacps_tablegen.d  aacps_tables.h  aacpsy.d  aacsbr.d  aacsbr_fixed.d  ac3dec_fixed.d  ac3dec_float.d  ac3enc.d  agm.d  aic.d  alacenc.d  allcodecs.d  amrwbdec.d  aom_film_grain.d  asvdec.d  asvenc.d  atrac1.d  atrac3.d  atrac3plusdec.d  atrac3plusdsp.d  av1dec.d  bink.d  binkaudio.d  (+158 more)
libavdevice/: CMakeLists.txt  alldevices.d  alsa_dec.d  avdevice.d  fbdev_dec.d  indev_list.c  kmsgrab.d  lavfi.d  libavdevice.pc  libavdevice.so.61  oss_dec.d  outdev_list.c  sdl2.d  utils.d  xcbgrab.d
libavfilter/: CMakeLists.txt  af_acrossover.d  af_afftdn.d  af_afir.d  af_arnndn.d  af_channelsplit.d  af_headphone.d  filter_list.c  libavfilter.pc  vf_colorspace.d  vf_convolution.d  vf_dctdnoiz.d  vf_fspp.d  vf_pp7.d  vf_spp.d  vf_uspp.d
libavformat/: 3dostr.d  4xm.d  CMakeLists.txt  aacdec.d  ac3dec.d  ac4dec.d  ac4enc.d  acedec.d  act.d  adp.d  ads.d  afc.d  (+228 more)
testFFmpeg_cmake/: CMakeLists.txt  main.cpp
(+72 files in other folders)
